--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://c4103m.github.io/porta",
+  "homepage": "https://c4103m.github.io/portalfuria2",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
